--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+    <!-- Hero Section -->
+    <section id="home" class="pt-36">
+        <div class="container">
+            <div class="flex flex-wrap">
+                <div class="w-full self-center px-4">
+                    <h1 class="text-base font-semibold text-primary">Halo Semua 👋, saya <span
+                            class="block text-dark text-4xl mt-1">Muhammad
+                            Razin
+                            Syakib</span></h1>
+                    <h2 class="font-medium text-slate-500 text-lg mb-5">Student & <span class="text-dark">Web
+                            Developer</span></h2>
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Qui,
+                        placeat.</p>
+
+                    <a href="#"
+                        class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact
+                        Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Hero Section -->
 </body>
 
 </html>
