--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <section id="home" class="pt-36">
         <div class="container">
             <div class="flex flex-wrap">
-                <div class="w-full self-center px-4">
-                    <h1 class="text-base font-semibold text-primary">Halo Semua 👋, saya <span
-                            class="block text-dark text-4xl mt-1">Muhammad
+                <div class="w-full self-center px-4 lg:w-1/2">
+                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl md:text-xl">Halo Semua 👋,
+                        saya <span class="block text-dark text-4xl mt-1 lg:text-5xl">Muhammad
                             Razin
                             Syakib</span></h1>
                     <h2 class="font-medium text-slate-500 text-lg mb-5">Student & <span class="text-dark">Web
                             Developer</span></h2>
-                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">Lorem ipsum dolor sit amet consectetur
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Qui,
                         placeat.</p>
@@ -30,7 +31,21 @@
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact
                         Me</a>
                 </div>
+                <div class="w-full self-end px-4 lg:w-1/2 md:scale-125">
+                    <div class="relative mt-10 lg:mt-9 lg:right-0">
+                        <img style="width: 500px;" src="dist/img/Razinv2.png" alt="Muhammad Razin Syakib"
+                            class="max-w-full mx-auto">
+                        <span class="absolute bottom-20 -z-10 left-1/2 -translate-x-1/2">
+                            <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="#14b8a6"
+                                    d="M41.1,-44.2C51.7,-30.6,57.5,-15.3,60.2,2.6C62.8,20.6,62.3,41.1,51.7,53C41.1,64.9,20.6,68.1,1.9,66.2C-16.7,64.3,-33.5,57.2,-44.2,45.3C-55,33.5,-59.9,16.7,-59.6,0.2C-59.4,-16.3,-54.1,-32.5,-43.3,-46.2C-32.5,-59.9,-16.3,-71,-0.5,-70.5C15.3,-70,30.6,-57.9,41.1,-44.2Z"
+                                    transform="translate(100 100) scale(1.2)" />
+                            </svg>
+                        </span>
+                    </div>
+                </div>
             </div>
+
         </div>
     </section>
     <!-- Hero Section -->
