--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2 md:scale-125">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
-                        <img style="width: 500px;" src="dist/img/Razinv2.png" alt="Muhammad Razin Syakib"
+                        <img style="width: 400px;" src="dist/img/Razin.png" alt="Muhammad Razin Syakib"
                             class="max-w-full mx-auto">
                         <span class="absolute bottom-20 -z-10 left-1/2 -translate-x-1/2">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#14b8a6"
                                     d="M41.1,-44.2C51.7,-30.6,57.5,-15.3,60.2,2.6C62.8,20.6,62.3,41.1,51.7,53C41.1,64.9,20.6,68.1,1.9,66.2C-16.7,64.3,-33.5,57.2,-44.2,45.3C-55,33.5,-59.9,16.7,-59.6,0.2C-59.4,-16.3,-54.1,-32.5,-43.3,-46.2C-32.5,-59.9,-16.3,-71,-0.5,-70.5C15.3,-70,30.6,-57.9,41.1,-44.2Z"
-                                    transform="translate(100 100) scale(1.2)" />
+                                    transform="translate(100 140) scale(1.2)" />
                             </svg>
                         </span>
                     </div>
