--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
         </div>
     </section>
     <!-- Hero Section -->
+
+    <!-- About Section -->
+    <section id="about" class="pt-36 pb-32">
+        <div class="container">
+            <div class="flex flex-wrap">
+                <div class="w-full px-4 mb-10">
+                    <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
+                    <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md">Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Quidem, temporibus?</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl">Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Reiciendis dolores suscipit corrupti
+                        provident deserunt asperiores aspernatur molestias quasi facere recusandae.</p>
+                </div>
+                <div class="w-full px-4">
+                    <h3 class="font-semibold text-dark text-2xl mb-4">Mari Berteman</h3>
+                    <p class="font-medium text-base text-secondary mb-6">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit. Fugit sapiente hic vel, ut
+                        reprehenderit quis qui suscipit deleniti? Labore, ut?</p>
+                </div>
+            </div>
+    </section>
+    <!-- About Section -->
+
 </body>
 
 </html>
