--- a/index.html
+++ b/index.html
@@ -54,19 +54,22 @@
     <section id="about" class="pt-36 pb-32">
         <div class="container">
             <div class="flex flex-wrap">
-                <div class="w-full px-4 mb-10">
+                <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-                    <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md">Lorem ipsum dolor sit amet consectetur
+                    <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md lg:text-4xl">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Quidem, temporibus?</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl">Lorem ipsum dolor sit amet consectetur
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing
                         elit. Reiciendis dolores suscipit corrupti
                         provident deserunt asperiores aspernatur molestias quasi facere recusandae.</p>
                 </div>
-                <div class="w-full px-4">
-                    <h3 class="font-semibold text-dark text-2xl mb-4">Mari Berteman</h3>
-                    <p class="font-medium text-base text-secondary mb-6">Lorem ipsum, dolor sit amet consectetur
+                <div class="w-full px-4 lg:w-1/2">
+                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Berteman</h3>
+                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum, dolor sit amet
+                        consectetur
                         adipisicing elit. Fugit sapiente hic vel, ut
                         reprehenderit quis qui suscipit deleniti? Labore, ut?</p>
                     <div class="flex items-center">
