--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 </head>
 
 <body>
+    <!-- Header Section -->
+    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
+        <div class="container">
+            <div class="flex items-center justify-between relative">
+                <div class="px-4">
+                    <a href="#home" class="font-bold text-lg text-primary block py-6 ">razinsyakib</a>
+                </div>
+                <div class="flex items-center px-4">
+                    <button id="hamburger" name="hamburger" type="button" class="block absolute right-4">
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Section -->
+
     <!-- Hero Section -->
     <section id="home" class="pt-36">
         <div class="container">
