make portofolio section

--- a/index.html
+++ b/index.html
@@ -166,9 +166,23 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- About Section -->
 
+    <!-- Portofolio Section -->
+    <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+        <div class="container">
+            <div class="flex flex-wrap">
+                <div class="w-full px-4">
+                    <div class="max-w-xl mx-auto text-center mb-16">
+                        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Portofolio Section -->
     <script src="dist/js/script.js"></script>
 </body>
 
