--- a/index.html
+++ b/index.html
@@ -176,7 +176,57 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
+                        <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+                        <h2 class="font-bold text-dark text-3xl mb-4">Project Terbaru</h2>
+                        <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptatem voluptas repellat unde
+                            dolorum adipisci. Impedit magni commodi consequatur quaerat enim.</p>
+                    </div>
+                </div>
+                <div class="w-full px-4 flex">
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop Webiste"
+                                style="width: 600px; border-radius: 0.375rem;">
+                        </div>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
+                            consectetur, adipisicing
+                            elit. Laboriosam excepturi doloribus veniam.
+                        </p>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop Webiste"
+                                style="width: 600px; border-radius: 0.375rem;">
+                        </div>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
+                            consectetur, adipisicing
+                            elit. Laboriosam excepturi doloribus veniam.
+                        </p>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop Webiste" width="100%"
+                                style="width: 600px; border-radius: 0.375rem;">
+                        </div>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
+                            consectetur, adipisicing
+                            elit. Laboriosam excepturi doloribus veniam.
+                        </p>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop Webiste" width="100%"
+                                style="width: 600px; border-radius: 0.375rem;">
+                        </div>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
+                            consectetur, adipisicing
+                            elit. Laboriosam excepturi doloribus veniam.
+                        </p>
                     </div>
                 </div>
             </div>
