--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             dolorum adipisci. Impedit magni commodi consequatur quaerat enim.</p>
                     </div>
                 </div>
-                <div class="w-full px-4 flex">
+                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop Webiste"
